Closed Bug 1191313 Opened 9 years ago Closed 5 years ago

Notifications third-party-cookie-* do not correctly identify the first party host

Categories

(Core :: Networking: Cookies, defect, P3)

38 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: mozilla, Assigned: baku)

Details

(Whiteboard: [necko-backlog])

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux i686; rv:38.0) Gecko/20100101 Firefox/38.0
Build ID: 20150514102509

Steps to reproduce:

1. Add an observer for "third-party-cookie-rejected" or "third-party-cookie-accepted".
2. Navigate to a page that sets a third party cookie.
3. Check the aData (third) parameter of the notification callback.


Actual results:

Parameter is a string representing the host (top level?) of the third party cookie which was set or not set, essentially the host of the URI in the aSubject parameter.


Expected results:

Should be the host of the "first party".  The code and original patch describes it as the referrer although it is actually just a host of the URI of the channel setting the cookie.  I'm not sure that even the referrer would be a reliable first party, but it might at least sometimes be different from the cookie URI.

There is no way for a consumer of these notifications to get back to the first party for these cookies, so the notifications are fairly pointless.
Component: Untriaged → Networking: Cookies
Product: Firefox → Core
Whiteboard: [necko-backlog]
Bulk change to priority: https://bugzilla.mozilla.org/show_bug.cgi?id=1399258
Priority: -- → P1
Bulk change to priority: https://bugzilla.mozilla.org/show_bug.cgi?id=1399258
Priority: P1 → P3

We can probably get rid of these 2 notifications. Nobody uses it and we already have the generic cookie-accepted/rejected notifications.

Assignee: nobody → amarchesini
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b3d94eb296e3
Get rid of third-party-cookie-accepted and third-party-cookie-rejected notifications, r=Ehsan
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
QA Whiteboard: [qa-69b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: