Bug 1191313 - Get rid of third-party-cookie-accepted and third-party-cookie-rejected notifications, r=Ehsan

Differential Revision: https://phabricator.services.mozilla.com/D32665